Apache2 is now automatically running after being installed on web server. New task for changing line in configuration file of apache2

--- a/site.yml
+++ b/site.yml
@@ -58,6 +58,30 @@
       state: latest
     when: ansible_distribution == "CentOS"
 
+  - name: start apache2 (Ubuntu)
+    tags: apache,apache2,ubuntu
+    service:
+      name: apache2
+      state: started
+      enabled: yes
+    when: ansible_distribution == "Ubuntu"
+
+  - name: change MaxKeepAliveRequests in configuration file of apache2
+    tags: apache,centos,httpd
+    lineinfile:
+      path: /etc/apache2/apache2.conf
+      regexp: '^MaxKeepAliveRequests'
+      line: MaxKeepAliveRequests 102
+    when: ansible_distribution == "Ubuntu"
+    register: apache2
+
+  - name: restart apache2 (Ubuntu)
+    tags: apache,apache2,ubuntu
+    service:
+      name: apache2
+      state: restarted
+    when: apache2.changed
+
   - name: copy default html file for site
     tags: apache,apache2,httpd
     copy:
