--- a/roles/web_servers/tasks/main.yml
+++ b/roles/web_servers/tasks/main.yml
@@ -31,3 +31,29 @@
     owner: root
     group: root
     mode: 0644
+
+
+- name: Install Docker
+  apt:
+    name: docker.io
+    state: present
+
+- name: Ensure Docker is running
+  service:
+    name: docker
+    state: started
+    enabled: yes
+
+- name: Run minecraft server on Docker container
+  community.docker.docker_container:
+    name: mcserver
+    image: itzg/minecraft-server:latest
+    state: started
+    restart_policy: unless-stopped
+    ports:
+      - "25565:25565"
+    env:
+      EULA: "TRUE"
+      MEMORY: "2G"
+    volumes:
+      - /opt/minecraft:/data
